[package]
name = "yggdrasil-rs"
version = "0.5.13"
edition = "2024"
authors = ["Yggdrasil Network Contributors"]
description = "Yggdrasil network node — Rust port of yggdrasil-go"
license = "LGPL-3.0"

# cdylib + staticlib allow the library to be used as a C-compatible shared/static
# library from Swift (iOS) and Kotlin/JNI (Android) via the `mobile` feature.
[lib]
name = "yggdrasil_rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "yggdrasil"
path = "src/bin/yggdrasil.rs"

[[bin]]
name = "yggdrasilctl"
path = "src/bin/yggdrasilctl.rs"

[[bin]]
name = "genkeys"
path = "src/bin/genkeys.rs"

[features]
default = ["tun-support"]
# tun-support: enables TUN device (Linux via rtnetlink, macOS/Windows via OS APIs)
# Note: rtnetlink/netlink-sys are declared as Linux-only platform deps below — they
# are NOT listed here so that `cargo build --target x86_64-pc-windows-*` works.
tun-support = ["dep:tun2"]
# embedded-wintun: embeds wintun.dll in the binary (Windows only).
# Place contrib/windows/wintun.dll before building (download from https://wintun.net).
# When enabled, the daemon extracts the DLL to %TEMP%\yggdrasil-rs\ at startup,
# eliminating the need for users to place wintun.dll next to the executable.
embedded-wintun = ["tun-support"]
# mobile: enables C FFI layer for iOS (Swift/Objective-C) and Android (JNI/Kotlin).
# Build with: cargo build --features mobile --target aarch64-apple-ios
#              cargo ndk --target aarch64-linux-android build --features mobile
mobile = []

[dependencies]
# Ironwood routing protocol (standalone crate)
ironwood-rs = { git = "https://github.com/AlexMelanFromRingo/ironwood-rs" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# TLS / crypto
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
rustls-pki-types = "1"
rustls-pemfile = "2"

# QUIC
quinn = { version = "0.11", default-features = false, features = ["rustls", "ring"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# Cryptography
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core", "serde", "hazmat"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
chacha20poly1305 = "0.10"
blake2 = "0.10"
sha2 = "0.10"
rand = "0.8"
curve25519-dalek = "4"
crypto_box = { version = "0.9", features = ["salsa20"] }
murmur3 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4", features = ["serde"] }
pem = "3"
pkcs8 = { version = "0.10", features = ["pem", "alloc"] }
rcgen = { version = "0.13", features = ["pem"] }

# Config (HJSON support)
deser-hjson = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Networking utilities
url = "2"
socket2 = { version = "0.5", features = ["all"] }
tokio-socks = "0.5"
ip_network = "0.4"
pnet_datalink = "0.35"
libc = "0.2"

# Utilities
regex = "1"
bytes = "1"
parking_lot = "0.12"
dashmap = "6"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

# TUN — cross-platform (Linux/macOS/Windows).
# On Windows, tun2 uses the wintun driver: place wintun.dll next to the binary.
# Download wintun.dll from https://wintun.net
tun2 = { version = "3", optional = true, features = ["async"] }

# Windows-only: WinAPI for IPv6 address assignment via IP Helper API
# (replaces netsh subprocess, matches yggdrasil-go's winipcfg approach).
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_LibraryLoader",
] }

# Linux-only: netlink for IPv6 address assignment after TUN creation.
# Not optional — always present on Linux. The tun/mod.rs code is gated by
# #[cfg(all(feature = "tun-support", target_os = "linux"))] so they're only
# used when the tun-support feature is enabled. Cross-compiling to Windows/iOS/
# Android is safe because these deps are simply absent on those platforms.
[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
netlink-sys = "0.8"

[dev-dependencies]
tokio-test = "0.4"
